Finish desctop resolution

--- a/index.html
+++ b/index.html
@@ -120,9 +120,95 @@
                     <br>
                 </div>
                 <br>
+                <div class="card post-two-img">
+                    <div class="post-two-img-header">
+                        <img width="60" height="60" src="https://www.w3schools.com/w3images/avatar2.png" alt="Post two image">
+                        <h4>John Doe</h4>
+                    </div>
+                    <span>1 min</span>
+                    <br>
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat dolor sapiente ea recusandae atque expedita aspernatur illo et, quod vero iste nihil assumenda deserunt numquam, eius vel explicabo totam. Minima.</p>
+                    <div class="post-two-img-box">
+                        <img src="https://www.w3schools.com/w3images/lights.jpg" alt="Post two box first image">
+                        <img src="https://www.w3schools.com/w3images/nature.jpg" alt="Post two image second image">
+                    </div>
+                    <div class="post-two-img-button-box">
+                        <button><i class="fa fa-thumbs-up"></i> Like</button>
+                        <button><i class="fa fa-comment"></i> Comment</button>
+                    </div>
+                </div>
+                <br>
+                <div class="card post-two-img">
+                    <div class="post-two-img-header">
+                        <img width="60" height="60" src="https://www.w3schools.com/w3images/avatar5.png" alt="Post no image">
+                        <h4>Jane Doe</h4>
+                    </div>
+                    <span>16 min</span>
+                    <br>
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat dolor sapiente ea recusandae atque expedita aspernatur illo et, quod vero iste nihil assumenda deserunt numquam, eius vel explicabo totam. Minima.</p>
+                    <div class="post-two-img-button-box">
+                        <button><i class="fa fa-thumbs-up"></i> Like</button>
+                        <button><i class="fa fa-comment"></i> Comment</button>
+                    </div>
+                </div>
+                <br>
+                <div class="card post-two-img">
+                    <div class="post-two-img-header">
+                        <img width="60" height="60" src="https://www.w3schools.com/w3images/avatar6.png" alt="Post one image">
+                        <h4>Angie Jane</h4>
+                    </div>
+                    <span>32 min</span>
+                    <br>
+                    <hr>
+                    <p>Have you seen this?</p>
+                    <div class="post-one-img-box">
+                        <img src="https://www.w3schools.com/w3images/nature.jpg" alt="Post two box first image">
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum soluta illum expedita, enim consequuntur cumque a doloribus earum blanditiis, distinctio accusamus voluptate perspiciatis dolores tempore et eligendi maiores officia id.</p>
+                    <div class="post-two-img-button-box">
+                        <button><i class="fa fa-thumbs-up"></i> Like</button>
+                        <button><i class="fa fa-comment"></i> Comment</button>
+                    </div>
+                </div>
             </div>
-            <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias mollitia nulla laboriosam, quam harum nostrum libero atque fuga aperiam reiciendis repellendus, inventore qui nemo sequi beatae tenetur placeat soluta ad.</div>
+            <div class="col">
+                <div class="card upcoming-events">
+                    <p>Upcoming Events:</p>
+                    <img width="196" height="130" src="https://www.w3schools.com/w3images/forest.jpg" alt="Upcoming Events image">
+                    <p>
+                        <strong>Holiday</strong>
+                    </p>
+                    <p>Friday 15:00</p>
+                    <button>Info</button>
+                </div>
+                <br>
+                <div class="card friend-request">
+                    <p>Friend Request</p>
+                    <img width="98" height="98" src="https://www.w3schools.com/w3images/avatar6.png" alt="Friend request image">
+                    <span>Jane Doe</span>
+                    <div class="fried-request-button-box">
+                        <button><i class="fa fa-check"></i></button>
+                        <button><i class="fa fa-remove"></i></button>
+                    </div>
+                </div>
+                <br>
+                <div class="card ads">
+                    <p>ads</p>
+                </div>
+                <br>
+                <div class="card bug">
+                    <i class="fa fa-bug w3-xxlarge"></i>
+                </div>
+            </div>
         </div>
+    </div>
+    <footer>
+        <h5>Footer</h5>
+    </footer>
+    <div class="copyright">
+        <p>Powered by Edmundas</p>
     </div>
     <script>
         var acc = document.getElementsByClassName("accordion");
